--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: "0.7.0"
   firebase_database: "^6.0.0"
   firebase_auth: "^0.20.0+1"
+  connectivity: ^2.0.2
+  google_maps_flutter: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
