--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   firebase_auth: "^0.20.0+1"
   connectivity: ^2.0.2
   google_maps_flutter: ^1.2.0
+  outline_material_icons: ^0.1.1
+  geolocator: ^6.2.1
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
