--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   outline_material_icons: ^0.1.1
   geolocator: ^6.2.1
   http: ^0.12.2
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
